--- a/default.conf
+++ b/default.conf
@@ -3,6 +3,10 @@ server {
 
   root /usr/share/nginx/html;
 
+  location ~ .*\.(ico) {
+    try_files $uri $uri/;
+  }
+
   location / {
     proxy_pass http://koa_app:3000;
   }
