--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   demo_nginx:
     image: nginx
     volumes:
-      - ./html/:/usr/share/nginx/html/
+      - ./public/:/usr/share/nginx/html/
       - ./default.conf:/etc/nginx/conf.d/default.conf
     restart: always
     ports:
