--- a/default.conf
+++ b/default.conf
@@ -7,7 +7,11 @@ server {
     try_files $uri $uri/;
   }
 
-  location / {
+  location ~ /api/(.*)$ {
     proxy_pass http://koa_app:3000;
   }
+
+  # location / {
+  #   proxy_pass http://koa_app:3000;
+  # }
 }
