--- a/default.conf
+++ b/default.conf
@@ -1,13 +1,27 @@
+upstream koa {
+  server koa_app:3000;
+}
+
 server {
   listen 80;
 
   root /usr/share/nginx/html;
 
+  set $myhost 'http://localhost:8000';
+
   location ~ .*\.(ico) {
     try_files $uri $uri/;
   }
 
-  location / {
-    proxy_pass http://koa_app:3000;
+  location /api {
+    return 200 'halo oapi';
+  }
+
+  location ~ ^/pinjaman(/.+)?/$ {
+    return 302 $myhost/pinjaman$1$is_args$args;
+  }
+
+  location ~ ^/pinjaman(/.+)?$ {
+    proxy_pass http://koa;
   }
 }
