--- a/default.conf
+++ b/default.conf
@@ -2,6 +2,10 @@ upstream koa {
   server koa_app:3000;
 }
 
+# https://www.nginx.com/blog/rate-limiting-nginx/
+# autocannon "http://localhost:8000/pinjaman" --renderStatusCodes
+limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
+
 server {
   listen 80;
 
@@ -22,6 +26,9 @@ server {
   }
 
   location ~ ^/pinjaman(/.+)?$ {
+    limit_req zone=mylimit burst=20 nodelay;
+    limit_req_status 429; # Default: 503
+    # limit_req_dry_run on;
     proxy_pass http://koa;
   }
 }
