--- a/default.conf
+++ b/default.conf
@@ -17,8 +17,8 @@ server {
     return 200 'halo oapi';
   }
 
-  location ~ ^/pinjaman(/.+)?/$ {
-    return 302 $myhost/pinjaman$1$is_args$args;
+  location ~ ^/(.*)/$ {
+    return 302 $myhost/$1$is_args$args;
   }
 
   location ~ ^/pinjaman(/.+)?$ {
