--- a/default.conf
+++ b/default.conf
@@ -1,10 +1,19 @@
+# https://www.nginx.com/blog/rate-limiting-nginx/
+# autocannon "http://localhost:8000/pinjaman" --renderStatusCodes
+# autocannon "http://localhost:8000/pinjaman" --renderStatusCodes -H "user-agent: googlebot"
+
 upstream koa {
   server koa_app:3000;
 }
 
-# https://www.nginx.com/blog/rate-limiting-nginx/
-# autocannon "http://localhost:8000/pinjaman" --renderStatusCodes
-limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
+map $http_user_agent $limit_bots {
+  default '';
+  "~*(Googlebot|google|bing|yandex|msnbot)" $binary_remote_addr;
+  "~*([a-z]+)?bot([a-z]+)?" $binary_remote_addr;
+}
+
+limit_req_zone $limit_bots zone=desktopbotlimit:10m rate=10r/s;
+limit_req_zone $binary_remote_addr zone=limitall:10m rate=1000r/s;
 
 server {
   listen 80;
@@ -12,6 +21,10 @@ server {
   root /usr/share/nginx/html;
 
   set $myhost 'http://localhost:8000';
+
+  limit_req_status 429; # Default: 503
+  limit_req zone=desktopbotlimit burst=20 nodelay;
+  # limit_req_dry_run on;
 
   location ~ .*\.(ico) {
     try_files $uri $uri/;
@@ -26,9 +39,6 @@ server {
   }
 
   location ~ ^/pinjaman(/.+)?$ {
-    limit_req zone=mylimit burst=20 nodelay;
-    limit_req_status 429; # Default: 503
-    # limit_req_dry_run on;
     proxy_pass http://koa;
   }
 }
