rate limit bot split

--- a/default.conf
+++ b/default.conf
@@ -1,19 +1,36 @@
 # https://www.nginx.com/blog/rate-limiting-nginx/
 # autocannon "http://localhost:8000/pinjaman" --renderStatusCodes
-# autocannon "http://localhost:8000/pinjaman" --renderStatusCodes -H "user-agent: googlebot"
+
+# autocannon "http://localhost:8000/pinjaman" --renderStatusCodes -H "user-agent: Mozilla/5.0 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)"
+
+# autocannon "http://localhost:8000/pinjaman" --renderStatusCodes -H "user-agent: AdsBot-Google (+http://www.google.com/adsbot.html)"
+
+# autocannon "http://localhost:8000/pinjaman" --renderStatusCodes -H "user-agent: Mozilla/5.0 (compatible; bingbot/2.0; +http://www.bing.com/bingbot.htm)"
+
+# autocannon "http://localhost:8000/pinjaman" --renderStatusCodes -H "user-agent: Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko; compatible; Googlebot/2.1; +http://www.google.com/bot.html) Chrome/60.0.0.1 Safari/537.36"
+
+# autocannon "http://localhost:8000/pinjaman" --renderStatusCodes -H "user-agent: Mozilla/5.0 (Linux; Android 6.0.1; Nexus 5X Build/MMB29P) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/W.X.Y.Z‡ Mobile Safari/537.36 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)"
+
+# autocannon "http://localhost:8000/pinjaman" --renderStatusCodes -H "user-agent: Mozilla/5.0 (X11; CrOS x86_64 10066.0.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36"
 
 upstream koa {
   server koa_app:3000;
 }
 
-map $http_user_agent $limit_bots {
+map $http_user_agent $limitdesktopbots {
   default '';
-  "~*(Googlebot|google|bing|yandex|msnbot)" $binary_remote_addr;
-  "~*([a-z]+)?bot([a-z]+)?" $binary_remote_addr;
+  "~*(AdsBot-Google)" 1;
+  "~*(Mozilla\/5.0 \(|\(KHTML, like Gecko; )compatible; (Googlebot|bingbot|AhrefsBot)" 1;
 }
 
-limit_req_zone $limit_bots zone=desktopbotlimit:10m rate=10r/s;
-limit_req_zone $binary_remote_addr zone=limitall:10m rate=1000r/s;
+map $http_user_agent $limitmobilebots {
+  default '';
+  "~*Mobile Safari\/\d\d\d\.\d\d \(compatible; (Googlebot|Google-Read-Aloud)" 2;
+}
+
+limit_req_zone $binary_remote_addr$uri zone=limitall:10m rate=5r/s;
+limit_req_zone $limitdesktopbots zone=desktopbotlimit:10m rate=300r/s;
+limit_req_zone $limitmobilebots zone=mobilebotlimit:10m rate=600r/s;
 
 server {
   listen 80;
@@ -23,7 +40,9 @@ server {
   set $myhost 'http://localhost:8000';
 
   limit_req_status 429; # Default: 503
-  limit_req zone=desktopbotlimit burst=20 nodelay;
+  # limit_req zone=limitall burst=5 nodelay;
+  limit_req zone=desktopbotlimit burst=5 nodelay;
+  limit_req zone=mobilebotlimit burst=5 nodelay;
   # limit_req_dry_run on;
 
   location ~ .*\.(ico) {
