--- a/default.conf
+++ b/default.conf
@@ -1,3 +1,23 @@
+upstream lite-ares {
+  server koa_app:3000;
+}
+
+upstream lite-atreus {
+  server koa_app:3001;
+}
+
+# set $upstream_lite 'lite-atreus';
+
+split_clients $remote_addr $upstream_first_visit {
+    50% lite-ares;
+    * lite-atreus;
+}
+
+# upstream lite-ares2 {
+#   server lite-ares;
+#   server lite-atreus;
+# }
+
 server {
   listen 80;
 
@@ -7,7 +27,9 @@ server {
     try_files $uri $uri/;
   }
 
+  set $upstream_pass $upstream_first_visit;
+
   location / {
-    proxy_pass http://koa_app:3000;
+    proxy_pass http://$upstream_pass;
   }
 }
