limit geo example

--- a/default.conf
+++ b/default.conf
@@ -1,3 +1,12 @@
+upstream koa {
+  server koa_app:3000;
+}
+
+geo $ipricebot {
+  172.20.0.1 1;
+  default 0;
+}
+
 server {
   listen 80;
 
@@ -7,7 +16,15 @@ server {
     try_files $uri $uri/;
   }
 
-  location / {
-    proxy_pass http://koa_app:3000;
+  location ~ ^/halo(/.+)?$ {
+    set $upstream_pass lite-example-pdp;
+    set $robot 1;
+    if ( $robot = 1 ) {
+      set $upstream_pass  lite-example-bot;
+    }
+    if ( $ipricebot = 1) {
+      set $upstream_pass koa;
+    }
+    proxy_pass http://$upstream_pass;
   }
 }
