--- a/default.conf
+++ b/default.conf
@@ -3,11 +3,17 @@ server {
 
   root /usr/share/nginx/html;
 
+  add_header X-Frame-Options              "SAMEORIGIN";
+  add_header X-Content-Type-Options       nosniff;
+  add_header Strict-Transport-Security    "max-age=31536000; includeSubdomains; preload";
+  add_header X-XSS-Protection             "1; mode=block";
+
   location ~ .*\.(ico) {
     try_files $uri $uri/;
   }
 
   location / {
+    proxy_set_header Host $host;
     proxy_pass http://koa_app:3000;
   }
 }
